...
                                    <constraint firstAttribute="height" constant="60" id="gzq-An-tvP"/>
                                </constraints>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wxN-iv-mr6">
                                <rect key="frame" x="16" y="704" width="361" height="48"/>
                                <color key="backgroundColor" name="YP White"/>
                                <accessibility key="accessibilityConfiguration" identifier="Authenticate"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="y4X-Mf-HXJ"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="SFPro-Heavy" family="SF Pro" pointSize="17"/>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" title="Войти">
...
                                <rect key="frame" x="0.0" y="56" width="393" height="4"/>
                                <color key="progressTintColor" name="YP Black"/>
                            </progressView>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="qkO-27-Vck"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <accessibility key="accessibilityConfiguration" identifier="UnsplashWebView">
                            <bool key="isElement" value="YES"/>
                        </accessibility>
                        <constraints>
                            <constraint firstAttribute="bottom" secondItem="HUD-si-eRy" secondAttribute="bottom" constant="34" id="6Yx-rv-yyb"/>
                            <constraint firstAttribute="leading" secondItem="HUD-si-eRy" secondAttribute="leading" id="Nej-uv-uXu"/>
                            <constraint firstItem="gGY-oE-eDV" firstAttribute="top" secondItem="qkO-27-Vck" secondAttribute="top" id="QfK-53-TNf"/>
...
                                                    <fontDescription key="fontDescription" name="YSDisplay-Medium" family="YS Display" pointSize="13"/>
                                                    <color key="textColor" name="YP White"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="S2I-8Z-CMa" userLabel="Like Button">
                                                    <rect key="frame" x="333" y="4" width="44" height="44"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="LikeButton"/>
                                                    <constraints>
                                                        <constraint firstAttribute="height" constant="44" id="CP2-LT-REI"/>
                                                        <constraint firstAttribute="width" constant="44" id="TOg-CU-Pj7"/>
                                                    </constraints>
                                                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                    <state key="normal" image="LikeActive"/>
...
                                <connections>
                                    <outlet property="delegate" destination="LH3-Xb-lbJ" id="lhW-Ks-g0p"/>
                                </connections>
                            </scrollView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4CP-ZD-5X2" userLabel="Back Button">
                                <rect key="frame" x="8" y="8" width="44" height="44"/>
                                <accessibility key="accessibilityConfiguration" identifier="NavBackButton"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="44" id="h73-HS-Zmg"/>
                                    <constraint firstAttribute="width" constant="44" id="oD1-po-7qj"/>
                                </constraints>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" image="Backward"/>
...
